--- a/go2.html
+++ b/go2.html
@@ -18,7 +18,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://i.imgur.com/FQEVdLc.png">
 
-  <title>Redirecting...</title>
+<title>Redirecting</title>
 
   <style>
     body {
