--- a/go2.html
+++ b/go2.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
+
+ <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Redirect -->
-  <meta http-equiv="refresh" content="0;url=https://1link.jp/nyankodayo">
-
   <!-- OGP -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://junhengshan91-blip.github.io/link/go.html">
+  <meta property="og:url" content="https://junhengshan91-blip.github.io/link/go3.html">
   <meta property="og:title" content=" ">
   <meta property="og:description" content=" ">
   <meta property="og:image" content="https://i.imgur.com/FQEVdLc.png">
@@ -18,35 +16,37 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://i.imgur.com/FQEVdLc.png">
 
-<title>Redirecting</title>
+  <title>Redirecting...</title>
 
   <style>
     body {
       margin: 0;
-      padding: 0;
+      background: #000;
+      color: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      background-color: #000;
-      color: #fff;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     }
     .container { text-align: center; }
-    .loading { font-size: 18px; margin-bottom: 20px; }
+    img { width: 100%; max-width: 600px; height: auto; }
     a { color: #1da1f2; text-decoration: none; }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="loading">リダイレクト中...</div>
-    <p>自動的に移動しない場合は
-      <a href="https://1link.jp/nyankodayo">こちらをクリック</a>
+    <img src="https://i.imgur.com/FQEVdLc.png" alt="">
+    <p>リダイレクト中…<br>
+      自動で移動しない場合は <a href="https://1link.jp/nyankodayo">こちら</a>
     </p>
   </div>
 
   <script>
-    window.location.href = "https://1link.jp/nyankodayo";
+    // JS遷移（XのクローラはJSを実行しないことが多い）
+    setTimeout(() => {
+      window.location.href = "https://1link.jp/nyankodayo";
+    }, 800);
   </script>
 </body>
 </html>
